src/main/parser/functionBody.c
// Copyright 2020 Justin Hu
//
// This file is part of the T Language Compiler.
//
// The T Language Compiler is free software: you can redistribute it and/or
// modify it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or (at your
// option) any later version.
//
// The T Language Compiler is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General
// Public License for more details.
//
// You should have received a copy of the GNU General Public License along with
// the T Language Compiler. If not see <https://www.gnu.org/licenses/>.
//
// SPDX-License-Identifier: GPL-3.0-or-later

#include "parser/functionBody.h"

#include <stdio.h>
#include <stdlib.h>
#include <string.h>

#include "buildStab.h"
#include "fileList.h"
#include "internalError.h"
#include "parser/common.h"
#include "util/conversions.h"

// token stuff

/**
 * grabs the next token from unparsed
 *
 * like lex, but reads tokens from unparsed nodes
 *
 * assumes you don't go past the end of the unparsed
 *
 * @param unparsed node to read from
 * @param t token to write into
 */
static void next(Node *unparsed, Token *t) {
  // get pointer to saved token
  Token *saved =
      unparsed->data.unparsed.tokens->elements[unparsed->data.unparsed.curr];
  // give ownership of it to the caller
  memcpy(t, saved, sizeof(Token));
  // free malloc'ed block - this token has its guts ripped out
  free(saved);
  // clear it - we don't need to remember it any more
  unparsed->data.unparsed.tokens->elements[unparsed->data.unparsed.curr++] =
      NULL;
}

/**
 * returns a token to unparsed
 *
 * like lex, but returns tokens to unparsed nodes
 *
 * assumes you don't go past the start of the unparsed
 *
 * @param unparsed node to write to
 * @param t token to read from
 */
static void prev(Node *unparsed, Token *t) {
  // malloc new block
  Token *saved = malloc(sizeof(Token));
  // copy from t (t now has its guts ripped out)
  memcpy(saved, t, sizeof(Token));
  // save it
  unparsed->data.unparsed.tokens->elements[--unparsed->data.unparsed.curr] =
      saved;
}

// miscellaneous functions

/**
 * skips tokens until an end of stmt is encountered
 *
 * consumes semicolons, leaves start of stmt tokens (including any ids) and
 * left/right braces (components of a compoundStmt individually fail and panic,
 * but a compoundStmt never ends with a panic)
 *
 * @param unparsed unparsed node to read from
 */
static void panicStmt(Node *unparsed) {
  while (true) {
    Token token;
    next(unparsed, &token);
    switch (token.type) {
      case TT_SEMI: {
        return;
      }
      case TT_LBRACE:
      case TT_RBRACE:
      case TT_IF:
      case TT_WHILE:
      case TT_DO:
      case TT_FOR:
      case TT_SWITCH:
      case TT_BREAK:
      case TT_CONTINUE:
      case TT_RETURN:
      case TT_ASM:
      case TT_VOID:
      case TT_UBYTE:
      case TT_CHAR:
      case TT_USHORT:
      case TT_UINT:
      case TT_INT:
      case TT_WCHAR:
      case TT_ULONG:
      case TT_LONG:
      case TT_FLOAT:
      case TT_DOUBLE:
      case TT_BOOL:
      case TT_ID:
      case TT_OPAQUE:
      case TT_STRUCT:
      case TT_UNION:
      case TT_ENUM:
      case TT_TYPEDEF:
      case TT_EOF: {
        prev(unparsed, &token);
        return;
      }
      default: {
        tokenUninit(&token);
        break;
      }
    }
  }
}

/**
 * skips tokens until a start of switch or unambiguous start of stmt is
 * encountered
 *
 * leaves start of stmt tokens (excluding ids) and start of case tokens
 *
 * @param unparsed unparsed node to read from
 */
static void panicSwitch(Node *unparsed) {
  while (true) {
    Token token;
    next(unparsed, &token);
    switch (token.type) {
      case TT_IF:
      case TT_WHILE:
      case TT_DO:
      case TT_FOR:
      case TT_SWITCH:
      case TT_BREAK:
      case TT_CONTINUE:
      case TT_RETURN:
      case TT_ASM:
      case TT_OPAQUE:
      case TT_STRUCT:
      case TT_UNION:
      case TT_ENUM:
      case TT_TYPEDEF:
      case TT_CASE:
      case TT_DEFAULT:
      case TT_EOF: {
        prev(unparsed, &token);
        return;
      }
      default: {
        tokenUninit(&token);
        break;
      }
    }
  }
}

/**
 * skips tokens until the end of a field/option boundary
 *
 * semicolons are consumed, right braces and the start of a type are left
 *
 * @param unparsed unparsed node to read from
 */
static void panicStructOrUnion(Node *unparsed) {
  while (true) {
    Token peek;
    next(unparsed, &peek);
    switch (peek.type) {
      case TT_SEMI: {
        return;
      }
      case TT_VOID:
      case TT_UBYTE:
      case TT_BYTE:
      case TT_CHAR:
      case TT_USHORT:
      case TT_UINT:
      case TT_INT:
      case TT_WCHAR:
      case TT_ULONG:
      case TT_LONG:
      case TT_FLOAT:
      case TT_DOUBLE:
      case TT_BOOL:
      case TT_ID:
      case TT_EOF:
      case TT_RBRACE: {
        prev(unparsed, &peek);
        return;
      }
      default: {
        tokenUninit(&peek);
        break;
      }
    }
  }
}

/**
 * skips tokens until the end of an enum constant
 *
 * commas are consumed, EOFs, and right braces are left
 *
 * @param unparsed unparsed node to read from
 */
static void panicEnum(Node *unparsed) {
  while (true) {
    Token token;
    next(unparsed, &token);
    switch (token.type) {
      case TT_COMMA: {
        return;
      }
      case TT_EOF:
      case TT_RBRACE: {
        prev(unparsed, &token);
        return;
      }
      default: {
        tokenUninit(&token);
        break;
      }
    }
  }
}

// context ignorant parsers

/**
 * parses an ID or scoped ID
 *
 * @param entry entry containing this node
 * @param unparsed unparsed node to read from
 *
 * @returns node or null on error
 */
static Node *parseAnyId(FileListEntry *entry, Node *unparsed) {
  Token idToken;
  next(unparsed, &idToken);
  if (idToken.type != TT_ID) {
    errorExpectedToken(entry, TT_ID, &idToken);
    prev(unparsed, &idToken);
    return NULL;
  }

  // maybe it's a scoped id?
  Token scope;
  next(unparsed, &scope);
  if (scope.type != TT_SCOPE) {
    // not a scoped id
    prev(unparsed, &scope);
    return idNodeCreate(&idToken);
  } else {
    // scoped id - saw scope
    Vector *components = vectorCreate();
    vectorInsert(components, idNodeCreate(&idToken));
    while (true) {
      // expect an id, add it to the node
      next(unparsed, &idToken);
      if (idToken.type != TT_ID) {
        errorExpectedToken(entry, TT_ID, &idToken);

        prev(unparsed, &idToken);

        nodeVectorFree(components);
        return NULL;
      } else {
        vectorInsert(components, idNodeCreate(&idToken));
      }

      // if there's a scope, keep going, else return
      next(unparsed, &scope);
      if (scope.type != TT_SCOPE) {
        prev(unparsed, &scope);
        return scopedIdNodeCreate(components);
      }
    }
  }
}

/**
 * parses a definitely scoped ID
 *
 * @param entry entry containing this node
 * @param unparsed unparsed node to read from
 *
 * @returns node or null on error
 */
static Node *parseScopedId(FileListEntry *entry, Node *unparsed) {
  Vector *components = vectorCreate();
  while (true) {
    Token peek;
    // expect an id, add it to the node
    next(unparsed, &peek);
    if (peek.type != TT_ID) {
      errorExpectedToken(entry, TT_ID, &peek);

      prev(unparsed, &peek);

      nodeVectorFree(components);
      return NULL;
    } else {
      vectorInsert(components, idNodeCreate(&peek));
    }

    // if there's a scope, keep going, else return
    next(unparsed, &peek);
    if (peek.type != TT_SCOPE) {
      prev(unparsed, &peek);

      if (components->size >= 2) {
        return scopedIdNodeCreate(components);
      } else {
        errorExpectedToken(entry, TT_SCOPE, &peek);

        nodeVectorFree(components);
        return NULL;
      }
    }
  }
}

/**
 * parses an ID (not scoped)
 *
 * @param entry entry containing this node
 * @param unparsed unparsed node to read from
 *
 * @returns node or null on error
 */
static Node *parseId(FileListEntry *entry, Node *unparsed) {
  Token id;
  next(unparsed, &id);

  if (id.type != TT_ID) {
    errorExpectedToken(entry, TT_ID, &id);

    prev(unparsed, &id);
    return NULL;
  }

  return idNodeCreate(&id);
}

/**
 * parses an extended int literal
 *
 * @param entry entry containing this node
 * @param unparsed unparsed node to read from
 * @param env environment to use
 *
 * @returns AST node or NULL if fatal error happened
 */
static Node *parseExtendedIntLiteral(FileListEntry *entry, Node *unparsed,
                                     Environment *env) {
  Token peek;
  next(unparsed, &peek);
  switch (peek.type) {
    case TT_LIT_CHAR: {
      return charLiteralNodeCreate(&peek);
    }
    case TT_LIT_WCHAR: {
      return wcharLiteralNodeCreate(&peek);
    }
    case TT_LIT_INT_B: {
      int8_t sign;
      uint64_t magnitude;
      int retval = binaryToInteger(peek.string, &sign, &magnitude);
      if (retval != 0) {
        errorIntOverflow(entry, &peek);

        tokenUninit(&peek);

        return NULL;
      }
      Node *n = sizedIntegerLiteralNodeCreate(&peek, sign, magnitude);
      if (n == NULL) errorIntOverflow(entry, &peek);
      return n;
    }
    case TT_LIT_INT_O: {
      int8_t sign;
      uint64_t magnitude;
      int retval = octalToInteger(peek.string, &sign, &magnitude);
      if (retval != 0) {
        errorIntOverflow(entry, &peek);

        tokenUninit(&peek);

        return NULL;
      }
      Node *n = sizedIntegerLiteralNodeCreate(&peek, sign, magnitude);
      if (n == NULL) errorIntOverflow(entry, &peek);
      return n;
    }
    case TT_LIT_INT_0:
    case TT_LIT_INT_D: {
      int8_t sign;
      uint64_t magnitude;
      int retval = decimalToInteger(peek.string, &sign, &magnitude);
      if (retval != 0) {
        errorIntOverflow(entry, &peek);

        tokenUninit(&peek);

        return NULL;
      }
      Node *n = sizedIntegerLiteralNodeCreate(&peek, sign, magnitude);
      if (n == NULL) errorIntOverflow(entry, &peek);
      return n;
    }
    case TT_LIT_INT_H: {
      int8_t sign;
      uint64_t magnitude;
      int retval = hexadecimalToInteger(peek.string, &sign, &magnitude);
      if (retval != 0) {
        errorIntOverflow(entry, &peek);

        tokenUninit(&peek);

        return NULL;
      }
      Node *n = sizedIntegerLiteralNodeCreate(&peek, sign, magnitude);
      if (n == NULL) errorIntOverflow(entry, &peek);
      return n;
    }
    case TT_ID: {
      prev(unparsed, &peek);
      Node *n = parseScopedId(entry, unparsed);
      if (n == NULL) {
        return NULL;
      }

      SymbolTableEntry *stabEntry = environmentLookup(env, n, false);
      if (stabEntry == NULL) {
        nodeFree(n);
        return NULL;
      } else if (stabEntry->kind != SK_ENUMCONST) {
        fprintf(stderr,
                "%s:%zu:%zu: error: expected an extended integer "
                "literal, found %s\n",
                entry->inputFilename, n->line, n->character,
                symbolKindToString(stabEntry->kind));
        entry->errored = true;

        nodeFree(n);
        return NULL;
      }

      return n;
    }
    case TT_BAD_CHAR:
    case TT_BAD_BIN:
    case TT_BAD_HEX: {
      return NULL;
    }
    default: {
      errorExpectedString(entry, "an exended integer literal", &peek);

      prev(unparsed, &peek);

      return NULL;
    }
  }
}

static Node *parseLiteral(FileListEntry *entry, Node *unparsed,
                          Environment *env);
/**
 * parses an aggregate initializer
 *
 * @param entry entry to lex from
 * @param start first token in aggregate init
 * @returns AST node or NULL if fatal error happened
 */
static Node *parseAggregateInitializer(FileListEntry *entry, Node *unparsed,
                                       Environment *env, Token *start) {
  Vector *literals = vectorCreate();
  while (true) {
    Token peek;
    next(unparsed, &peek);
    switch (peek.type) {
      case TT_LIT_STRING:
      case TT_LIT_WSTRING:
      case TT_LIT_CHAR:
      case TT_LIT_WCHAR:
      case TT_LIT_INT_0:
      case TT_LIT_INT_B:
      case TT_LIT_INT_O:
      case TT_LIT_INT_D:
      case TT_LIT_INT_H:
      case TT_LIT_DOUBLE:
      case TT_LIT_FLOAT:
      case TT_TRUE:
      case TT_FALSE:
      case TT_NULL:
      case TT_ID:
      case TT_LSQUARE:
      case TT_BAD_STRING:
      case TT_BAD_CHAR:
      case TT_BAD_BIN:
      case TT_BAD_HEX: {
        // this is the start of a field
        prev(unparsed, &peek);
        Node *literal = parseLiteral(entry, unparsed, env);
        if (literal == NULL) {
          nodeVectorFree(literals);
          return NULL;
        }
        vectorInsert(literals, literal);
        break;
      }
      case TT_RSQUARE: {
        // end of the init
        Node *n = literalNodeCreate(LT_AGGREGATEINIT, start);
        n->data.literal.data.aggregateInitVal = literals;
        return n;
      }
      default: {
        errorExpectedString(entry, "a right square bracket or a literal",
                            &peek);

        prev(unparsed, &peek);

        nodeVectorFree(literals);
        return NULL;
      }
    }
  }
}

/**
 * parses a literal
 *
 * @param entry entry to lex from
 * @returns AST node or NULL if fatal error happened
 */
static Node *parseLiteral(FileListEntry *entry, Node *unparsed,
                          Environment *env) {
  Token peek;
  next(unparsed, &peek);
  switch (peek.type) {
    case TT_LIT_CHAR:
    case TT_LIT_WCHAR:
    case TT_LIT_INT_B:
    case TT_LIT_INT_O:
    case TT_LIT_INT_0:
    case TT_LIT_INT_D:
    case TT_LIT_INT_H:
    case TT_ID: {
      prev(unparsed, &peek);
      return parseExtendedIntLiteral(entry, unparsed, env);
    }
    case TT_LIT_STRING: {
      return stringLiteralNodeCreate(&peek);
    }
    case TT_LIT_WSTRING: {
      return wstringLiteralNodeCreate(&peek);
    }
    case TT_LIT_DOUBLE: {
      uint64_t bits = doubleStringToBits(peek.string);
      Node *n = literalNodeCreate(LT_DOUBLE, &peek);
      n->data.literal.data.doubleBits = bits;
      return n;
    }
    case TT_LIT_FLOAT: {
      uint32_t bits = floatStringToBits(peek.string);
      Node *n = literalNodeCreate(LT_FLOAT, &peek);
      n->data.literal.data.floatBits = bits;
      return n;
    }

    case TT_TRUE:
    case TT_FALSE: {
      Node *n = literalNodeCreate(LT_BOOL, &peek);
      n->data.literal.data.boolVal = peek.type == TT_TRUE;
      return n;
    }
    case TT_NULL: {
      return literalNodeCreate(LT_NULL, &peek);
    }
    case TT_LSQUARE: {
      // aggregate initializer
      return parseAggregateInitializer(entry, unparsed, env, &peek);
    }
    case TT_BAD_CHAR:
    case TT_BAD_BIN:
    case TT_BAD_HEX:
    case TT_BAD_STRING: {
      return NULL;
    }
    default: {
      errorExpectedString(entry, "a literal", &peek);

      prev(unparsed, &peek);

      return NULL;
    }
  }
}

/**
 * parses a type
 *
 * @param entry entry to lex from
 * @returns AST node or NULL if fatal error happened
 */
static Node *parseType(FileListEntry *entry, Node *unparsed, Environment *env) {
  Node *type;

  Token start;
  next(unparsed, &start);
  switch (start.type) {
    case TT_VOID: {
      type = keywordTypeNodeCreate(TK_VOID, &start);
      break;
    }
    case TT_UBYTE: {
      type = keywordTypeNodeCreate(TK_UBYTE, &start);
      break;
    }
    case TT_BYTE: {
      type = keywordTypeNodeCreate(TK_BYTE, &start);
      break;
    }
    case TT_CHAR: {
      type = keywordTypeNodeCreate(TK_CHAR, &start);
      break;
    }
    case TT_USHORT: {
      type = keywordTypeNodeCreate(TK_USHORT, &start);
      break;
    }
    case TT_SHORT: {
      type = keywordTypeNodeCreate(TK_SHORT, &start);
      break;
    }
    case TT_UINT: {
      type = keywordTypeNodeCreate(TK_UINT, &start);
      break;
    }
    case TT_INT: {
      type = keywordTypeNodeCreate(TK_INT, &start);
      break;
    }
    case TT_WCHAR: {
      type = keywordTypeNodeCreate(TK_WCHAR, &start);
      break;
    }
    case TT_ULONG: {
      type = keywordTypeNodeCreate(TK_ULONG, &start);
      break;
    }
    case TT_LONG: {
      type = keywordTypeNodeCreate(TK_LONG, &start);
      break;
    }
    case TT_FLOAT: {
      type = keywordTypeNodeCreate(TK_FLOAT, &start);
      break;
    }
    case TT_DOUBLE: {
      type = keywordTypeNodeCreate(TK_DOUBLE, &start);
      break;
    }
    case TT_BOOL: {
      type = keywordTypeNodeCreate(TK_BOOL, &start);
      break;
    }
    case TT_ID: {
      prev(unparsed, &start);
      type = parseAnyId(entry, unparsed);
      if (type == NULL) return NULL;
      break;
    }
    default: {
      errorExpectedString(entry, "a type", &start);

      prev(unparsed, &start);

      return NULL;
    }
  }

  while (true) {
    Token next1;
    next(unparsed, &next1);
    switch (next1.type) {
      case TT_CONST: {
        type = modifiedTypeNodeCreate(TM_CONST, type);
        break;
      }
      case TT_VOLATILE: {
        type = modifiedTypeNodeCreate(TM_VOLATILE, type);
        break;
      }
      case TT_LSQUARE: {
        Node *size = parseExtendedIntLiteral(entry, unparsed, env);
        if (size == NULL) {
          nodeFree(type);

          return NULL;
        }

        Token rsquare;
        next(unparsed, &rsquare);
        if (rsquare.type != TT_RSQUARE) {
          errorExpectedToken(entry, TT_RSQUARE, &rsquare);

          prev(unparsed, &rsquare);

          nodeFree(type);
          nodeFree(size);
          return NULL;
        }

        type = arrayTypeNodeCreate(type, size);
        return NULL;
      }
      case TT_STAR: {
        type = modifiedTypeNodeCreate(TM_POINTER, type);
        break;
      }
      case TT_LPAREN: {
        Vector *argTypes = vectorCreate();
        Vector *argNames = vectorCreate();
        bool doneArgs = false;

        Token peek;
        next(unparsed, &peek);
        if (peek.type == TT_RPAREN)
          doneArgs = true;
        else
          prev(unparsed, &peek);
        while (!doneArgs) {
          Token next2;
          next(unparsed, &next2);
          switch (next2.type) {
            case TT_VOID:
            case TT_UBYTE:
            case TT_BYTE:
            case TT_CHAR:
            case TT_USHORT:
            case TT_SHORT:
            case TT_UINT:
            case TT_INT:
            case TT_WCHAR:
            case TT_ULONG:
            case TT_LONG:
            case TT_FLOAT:
            case TT_DOUBLE:
            case TT_BOOL:
            case TT_ID: {
              prev(unparsed, &start);
              Node *argType = parseType(entry, unparsed, env);
              if (argType == NULL) {
                nodeVectorFree(argTypes);
                nodeVectorFree(argNames);
                nodeFree(type);
                return NULL;
              }
              vectorInsert(argTypes, argType);

              Token id;
              next(unparsed, &id);
              if (id.type == TT_ID)
                // has an identifier - ignore this
                tokenUninit(&id);
              else
                prev(unparsed, &id);

              Token next3;
              next(unparsed, &next3);
              switch (next3.type) {
                case TT_COMMA: {
                  // more to follow
                  break;
                }
                case TT_RPAREN: {
                  // done this one
                  doneArgs = true;
                  break;
                }
                default: {
                  errorExpectedString(entry, "a comma or a right parenthesis",
                                      &next3);

                  prev(unparsed, &next3);

                  nodeVectorFree(argTypes);
                  nodeFree(type);
                  return NULL;
                }
              }
              break;
            }
            default: {
              errorExpectedString(entry, "a type", &next2);

              prev(unparsed, &next2);

              nodeVectorFree(argTypes);
              nodeFree(type);
              return NULL;
            }
          }
        }

        type = funPtrTypeNodeCreate(type, argTypes, argNames);
        break;
      }
      default: {
        prev(unparsed, &next1);
        return type;
      }
    }
  }
}

/**
 * parses a field or option declaration
 *
 * @param entry entry to lex from
 * @param start first token
 * @returns declaration or null if fatal error
 */
static Node *parseFieldOrOptionDecl(FileListEntry *entry, Node *unparsed,
                                    Environment *env, Token *start) {
  prev(unparsed, start);
  Node *type = parseType(entry, unparsed, env);
  if (type == NULL) {
    return NULL;
  }

  Vector *names = vectorCreate();
  bool done = false;
  while (!done) {
    Token id;
    next(unparsed, &id);
    if (id.type != TT_ID) {
      errorExpectedToken(entry, TT_ID, &id);

      prev(unparsed, &id);

      nodeFree(type);
      nodeVectorFree(names);
      return NULL;
    }

    vectorInsert(names, idNodeCreate(&id));

    Token peek;
    next(unparsed, &peek);
    switch (peek.type) {
      case TT_SEMI: {
        // end of the names
        done = true;
        break;
      }
      case TT_COMMA: {
        // comma between names - do nothing
        break;
      }
      default: {
        errorExpectedString(entry, "a semicolon or a comma", &peek);

        prev(unparsed, &peek);

        nodeFree(type);
        nodeVectorFree(names);
        return NULL;
      }
    }
  }

  if (names->size == 0) {
    nodeFree(type);
    nodeVectorFree(names);
    return NULL;
  }

  return varDeclNodeCreate(type, names);
}

static Node *parseExpression(FileListEntry *entry, Node *unparsed,
                             Environment *env);

static Node *parseAssignmentExpression(FileListEntry *entry, Node *unparsed,
                                       Environment *env);

/**
 * parses a primary expression
 *
 * @param entry entry containing this node
 * @param unparsed unparsed node to read from
 * @param env environment to use
 *
 * @returns node or null on error
 */
static Node *parsePrimaryExpression(FileListEntry *entry, Node *unparsed,
                                    Environment *env) {
  Token peek;
  next(unparsed, &peek);
  switch (peek.type) {
    case TT_ID: {
      prev(unparsed, &peek);
      Node *n = parseAnyId(entry, unparsed);
      SymbolTableEntry *stabEntry = environmentLookup(env, n, false);
      if (stabEntry == NULL) {
        return NULL;
      } else if (stabEntry->kind != SK_ENUMCONST &&
                 stabEntry->kind != SK_FUNCTION &&
                 stabEntry->kind != SK_VARIABLE) {
        fprintf(stderr, "%s:%zu:%zu: error: cannot use a type as a variable",
                entry->inputFilename, n->line, n->character);
        fprintf(stderr, "%s:%zu:%zu: note: declared here",
                stabEntry->file->inputFilename, stabEntry->line,
                stabEntry->character);
        entry->errored = true;
      } else {
        if (n->type == NT_ID) {
          n->data.id.entry = stabEntry;
        } else {
          n->data.scopedId.entry = stabEntry;
        }
      }
      return n;
    }
    case TT_LIT_STRING:
    case TT_LIT_WSTRING:
    case TT_LIT_CHAR:
    case TT_LIT_WCHAR:
    case TT_LIT_INT_0:
    case TT_LIT_INT_B:
    case TT_LIT_INT_O:
    case TT_LIT_INT_D:
    case TT_LIT_INT_H:
    case TT_LIT_DOUBLE:
    case TT_LIT_FLOAT:
    case TT_TRUE:
    case TT_FALSE:
    case TT_NULL:
    case TT_BAD_CHAR:
    case TT_BAD_BIN:
    case TT_BAD_HEX:
    case TT_BAD_STRING: {
      prev(unparsed, &peek);
      return parseLiteral(entry, unparsed, env);
    }
    case TT_CAST: {
      Token langle;
      next(unparsed, &langle);
      if (langle.type != TT_LANGLE) {
        errorExpectedToken(entry, TT_LANGLE, &langle);

        prev(unparsed, &langle);
        return NULL;
      }

      Node *type = parseType(entry, unparsed, env);
      if (type == NULL) {
        return NULL;
      }

      Token rangle;
      next(unparsed, &rangle);
      if (rangle.type != TT_RANGLE) {
        errorExpectedToken(entry, TT_RANGLE, &rangle);

        prev(unparsed, &rangle);

        nodeFree(type);
        return NULL;
      }

      Token lparen;
      next(unparsed, &lparen);
      if (lparen.type != TT_LPAREN) {
        errorExpectedToken(entry, TT_LPAREN, &lparen);

        prev(unparsed, &lparen);

        nodeFree(type);
        return NULL;
      }

      Node *target = parseExpression(entry, unparsed, env);
      if (target == NULL) {
        nodeFree(type);
        return NULL;
      }

      Token rparen;
      next(unparsed, &rparen);
      if (rparen.type != TT_RPAREN) {
        errorExpectedToken(entry, TT_RPAREN, &rparen);

        prev(unparsed, &rparen);

        nodeFree(target);
        nodeFree(type);
        return NULL;
      }

      return castExpNodeCreate(&peek, type, target);
    }
    case TT_SIZEOF: {
      Token lparen;
      next(unparsed, &lparen);
      if (lparen.type != TT_LPAREN) {
        errorExpectedToken(entry, TT_LPAREN, &lparen);
        return NULL;
      }

      Token sizeofPeek;
      next(unparsed, &sizeofPeek);
      switch (sizeofPeek.type) {
        case TT_VOID:
        case TT_UBYTE:
        case TT_BYTE:
        case TT_CHAR:
        case TT_USHORT:
        case TT_UINT:
        case TT_INT:
        case TT_WCHAR:
        case TT_ULONG:
        case TT_LONG:
        case TT_FLOAT:
        case TT_DOUBLE:
        case TT_BOOL: {
          // unambiguously a type
          prev(unparsed, &sizeofPeek);
          Node *target = parseType(entry, unparsed, env);
          if (target == NULL) {
            return NULL;
          }

          return prefixUnOpExpNodeCreate(UO_SIZEOFTYPE, &peek, target);
        }
        case TT_ID: {
          // maybe a type, maybe an expression - disambiguat
          Node idNode;
          idNode.type = NT_ID;
          idNode.line = sizeofPeek.line;
          idNode.character = sizeofPeek.character;
          idNode.data.id.id = sizeofPeek.string;
          idNode.data.id.entry = NULL;

          SymbolTableEntry *symbolEntry =
              environmentLookup(env, &idNode, false);
          if (symbolEntry == NULL) {
            prev(unparsed, &sizeofPeek);
            return NULL;
          }

          switch (symbolEntry->kind) {
            case SK_VARIABLE:
            case SK_FUNCTION:
            case SK_ENUMCONST: {
              prev(unparsed, &sizeofPeek);
              Node *target = parseExpression(entry, unparsed, env);
              if (target == NULL) {
                return NULL;
              }

              return prefixUnOpExpNodeCreate(UO_SIZEOFEXP, &peek, target);
            }
            case SK_OPAQUE:
            case SK_STRUCT:
            case SK_UNION:
            case SK_ENUM:
            case SK_TYPEDEF: {
              prev(unparsed, &sizeofPeek);
              Node *target = parseType(entry, unparsed, env);
              if (target == NULL) {
                return NULL;
              }

              return prefixUnOpExpNodeCreate(UO_SIZEOFTYPE, &peek, target);
            }
            default: {
              error(__FILE__, __LINE__, "invalid SymbolKind enum encountered");
            }
          }
        }
        case TT_STAR:
        case TT_AMP:
        case TT_INC:
        case TT_DEC:
        case TT_MINUS:
        case TT_BANG:
        case TT_TILDE:
        case TT_CAST:
        case TT_SIZEOF:
        case TT_LPAREN:
        case TT_LSQUARE: {
          // unambiguously an expression
          prev(unparsed, &sizeofPeek);
          Node *target = parseExpression(entry, unparsed, env);
          if (target == NULL) {
            return NULL;
          }

          return prefixUnOpExpNodeCreate(UO_SIZEOFEXP, &peek, target);
        }
        default: {
          // unexpected token
          errorExpectedString(entry, "a type or an expression", &peek);

          prev(unparsed, &peek);
          return NULL;
        }
      }
    }
    case TT_LPAREN: {
      Node *exp = parseExpression(entry, unparsed, env);
      if (exp == NULL) {
        return NULL;
      }

      Token rparen;
      next(unparsed, &rparen);
      if (rparen.type != TT_RPAREN) {
        errorExpectedToken(entry, TT_RPAREN, &rparen);

        nodeFree(exp);
        return NULL;
      }
